# twitterInvestor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json
app/: __init__.py  main.py  runtime.py
app/api/: balance-chart.js  dashboard.html  routes.py
app/cli/: backfill.py  pnl.py  rh_login.py  test_order.py
app/config/: account_managers.py  settings.py
app/db/: base.py  init_db.py  manager_repair.py  migrations.py  session.py
app/execution/: broker.py  buying_power.py  holdings.py  mock_broker.py  order_details.py  robinhood_accounts.py  robinhood_broker.py  robinhood_session.py
app/ingestion/: __init__.py  clients.py  service.py
app/models/: db_models.py  (+1 more)
docs/: VPS.md
scripts/: evening_pause.sh  start_bot.sh  startup_backfill.sh  stop_bot.sh
tests/: conftest.py  test_account_manager_sells.py  test_backfill.py  test_buy_conviction.py  test_buying_power.py  test_holdings.py  test_hybrid_parser.py  test_ingestion.py  test_manager_repair.py  test_market_hours.py  test_multi_manager.py  test_order_details.py  test_parser.py  test_portfolio_history.py  test_portfolio_ledger.py  test_portfolio_metrics.py  test_recognized_tickers.py  test_rh_login.py  test_risk_guards.py  test_risk_manager.py  test_robinhood_accounts.py  test_robinhood_broker.py  test_robinhood_session.py  test_sell_fraction.py  test_sell_intent.py  test_sell_sizing.py  test_text_normalize.py  test_tweet_query.py  test_twitter_clients.py  test_watch_parser.py  test_watchlist.py  test_worker_execution.py  test_x_profile_errors.py
(+34 files in other folders)
