[project]
name = "twitter-trade-bot"
version = "0.1.0"
description = "Phase 1 MVP for tweet-driven micro trading"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "playwright>=1.54.0",
  "robin-stocks>=3.4.0",
  "python-dotenv>=1.0.1",
  "scikit-learn>=1.5.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
